지역 api 해결